# nexoid-ed

./: .gitmodules  ;  CMakeLists.txt  COMMENTS.md  CardValidityCheck.drn  CardValidityCheck.sql  ChipFallback.drn  Common.c  Common.h  DropTables.sql  Hapi.c  Hapi.h  Interface.h  Makefile  NexoConfigration.asn1  NexoConfigration.fi  NexoFast.c  NexoFast.h  NexoFast.sql  PaymentCompletion.drn  README.md  SHAP.c  SelectItemMsg.sql  TODO  application_profile.c  common.c  common.h  cxx_macros.h  instrumentation.c  local.h  macro.h  main.c  main.cflow  memutils.c  memutils.h  nexo.h  nexoid-ut-x86_64.t  nexoid-ut.t  profiling_build.jq  profiling_build.pq  (+5 more)
ft/: Makefile  dmapi.c  example.c  example.scm  run.scm  shapi.c
include/: application_profile.h  bool.h  candidate_list.h  common.h  dmapi.h  eapi.h  gtd.h  hapi.h  macro.h  mem.h  outcome.h  papi.h  pklr.h  scapi.h  tag_retrival.h  termainal.h  tmapi.h  types.h  utils.h
include/configuration/: e0_permanent_terminal_specific_data.h  e1_terminal_specific_data.h  e2_application_profile_selection_table.h  e3_certification_authority_public_key_table.h  e4_service_settings_table.h  e5_terminal_list_of_aid.h  e6_application_profile.h  e7_terminal_list_of_bid.h  e8_application_selection_table_non_chip.h  e9_exception_file.h  ea_limit_set_list.h  eb_default_kernel_id_and_app_label_per_aid.h  ec_combination_list_and_parameters.h  ed_acquirer_parameter_table.h  ee_aid_preference_table.h  ef_additional_data_elements.h  f0_eea_process_table.h  f1_eea_only_list_of_aid.h
include/data_types/: c2.h  c4.h  e6_application_profile.h  effective_application_profile.h  emv.h  emv_status.h  fci.h  nexo_types.h  outcome.h  response_message_template.h  tags.h  termainal.h  types.h
include/global_data_elements/: card_data.h  global_data_elements.h  kernel_data.h  online_response_data.h  service_initialisation.h  terminal_configuration_data.h  terminal_transaction_data.h
include/interfaces/: eapi.h  hapi.h  papi.h  pklr.h  scapi.h
include/local_data_elements/: application_kernel_and_app_profile_selection.h  technology_selection.h  transaction_completion.h
sample-programs/trace-app/: adjust_addr.awk
src/: NexoFast.sql  common.c  cxx_macros.h  local.h  nexo.h  stubs.c  tag_retrival.c  tag_retrival.h
ut/: Makefile  common.c  common.h  memory_layout.t  nexoid-ut-x86_64.t
